[project]
name = "vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pip>=25.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
